objects/JBCXM__GSRelationship__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>GSRelationship</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSAverageNPSBucket__c</fullName>
        <label>Average NPS Bucket</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promoter</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
                <value>
                    <fullName>Detractor</fullName>
                </value>
                <value>
                    <fullName>No Recent Responses</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__GSCSMModel__c</fullName>
        <label>CSM Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSCSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To associate a relationship to a CSM.</description>
        <label>CSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CSMGSRelationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSComments__c</fullName>
        <description>Comments for relationships.</description>
        <label>Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSLatestNPSScore__c</fullName>
        <label>Latest NPS Score</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__RelationshipType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Type</label>
        <referenceTo>JBCXM__GSRelationshipType__c</referenceTo>
        <relationshipLabel>Relationship Type</relationshipLabel>
        <relationshipName>GSRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GS Relationship</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>NAME</columns>
        <columns>JBCXM__Account__c</columns>
        <columns>JBCXM__RelationshipType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GS Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>